--- a/src/sass/elements/_forms.scss
+++ b/src/sass/elements/_forms.scss
@@ -26,6 +26,8 @@ button[role='radio'] {
 /* input placeholder color */
 input,
 textarea {
+	outline: none !important;
+
 	&::placeholder {
 		opacity: 0.6 !important;
 		color: var(--c-subtext-2) !important;
