--- a/src/sass/pages/_gpt-store.scss
+++ b/src/sass/pages/_gpt-store.scss
@@ -2,19 +2,23 @@
 
 main:has(.sticky [href='/gpts/editor']),
 .h-full.overflow-y-auto:has(.sticky [href^='/auth/login?next=/gpts']) {
+
 	/* Notification on the top of the GPTs Store page (before the sticky header): "GPTs will be coming to free users over the next few weeks. Stay tuned!" */
 	.bg-token-main-surface-tertiary[class*='h-[52px] w-full'] {
 		background-color: hsla(var(--accent-hsl) / 0.07) !important;
 		border-bottom: 1px solid hsla(var(--accent-hsl) / 0.04);
 		color: var(--c-accent);
 	}
+
 	/* Sticky header tags aka "Top Picks", "DALLE", "Writing", etc */
 	.sticky {
+
 		[class*='md:rounded-none'],
 		[class*='md:rounded-lg'] {
 			border-radius: 100vw !important;
 			padding-inline: 1rem !important;
 		}
+
 		/* Active tag aka "Top Picks" */
 		[class*='md:rounded-none'] {
 			border: none !important;
@@ -26,6 +30,7 @@ main:has(.sticky [href='/gpts/editor']),
 				background-color: var(--c-accent) !important;
 			}
 		}
+
 		/* No-active tags aka "DALLE", "Writing", etc */
 		[class*='md:rounded-lg'] {
 			background-color: hsla(var(--accent-hsl) / 0.2) !important;
@@ -41,12 +46,14 @@ main:has(.sticky [href='/gpts/editor']),
 		}
 	}
 
-	/* All the cards hover bg (on search query list and on main big ones) */
-	[class*='dark:hover:bg-white/10'] {
+	/* All the cards hover bg (on search query list and on main big ones)
+	BUT it is also and "🌐 Global View on/off" btn in .sticky header so we have to use: not(button)*/
+	[class*='dark:hover:bg-white/10']:not(button) {
 		&:hover {
 			background-color: var(--c-surface-3) !important;
 		}
 	}
+
 	/* Section visible on search query */
 	[id*='headlessui-popover-panel-'] {
 		// border: 1px solid red !important;
@@ -73,6 +80,7 @@ main:has(.sticky [href='/gpts/editor']),
 
 	/* All the card items in GPTs Store main page */
 	.h-fit {
+
 		/* "See more" full-width buttons */
 		.btn.w-full {
 			// padding: calc(var(--p-btn) * 1.5) !important;
